# metapak

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM_TODO.md  GEMINI.md  LICENSE  PKGBUILD  README.md  TODO.md  arch-tui.desktop  config.example.toml  install.ps1  install.sh  metapak.desktop  metapak_architecture.html  metapak_architecture.json
.github/workflows/: ci.yml
.superpowers/brainstorm/231928-1777799021/content/: approaches.html  categories.html  design-lifecycle.html  design-overview.html  design-rollback.html  design-snapshot.html  next-chapters.html  robustness-pillars.html
.superpowers/brainstorm/231928-1777799021/state/: server-stopped
config/: default.toml
docs/superpowers/plans/: 2026-04-15-arch-tui-future-enhancements-plan.md  2026-04-15-arch-tui-visual-overhaul-plan.md  2026-05-03-arch-tui-robustness-suite.md  2026-05-04-btrfs-snapshot-provider.md  2026-05-07-arch-tui-ultimate-expansion-plan.md  2026-05-10-metapak-rename-plan.md
docs/superpowers/specs/: 2026-04-15-arch-tui-visual-overhaul-design.md  2026-05-03-arch-tui-robustness-suite-design.md  2026-05-10-metapak-rename-design.md  2026-05-28-documentation-improvements-design.md
src/: action.rs  animations.rs  app.rs  app_test.rs  aur.rs  command.rs  config.rs  constants.rs  dependency_visualization.rs  diagnostics.rs  errors.rs  export.rs  hooks.rs  i18n.rs  input.rs  keybindings.rs  lib.rs  main.rs  models.rs  notifications.rs  operation_queue.rs  pacman.rs  parallel.rs  platform.rs  search.rs  security.rs  services.rs  simulation.rs  state.rs  telemetry.rs  theme.rs  traits.rs  transaction_history.rs  transaction_manager.rs  ui.rs  ui_utils.rs  utils.rs  watchdog.rs
src/backends/: apk.rs  apt.rs  brew.rs  cargo_backend.rs  chocolatey.rs  dnf.rs  flatpak.rs  mod.rs  npm.rs  pacman.rs  pip.rs  scoop.rs  snap.rs  winget.rs  zypper.rs
src/backends/snapshots/: btrfs.rs  lvm.rs  mod.rs  timeshift.rs  zfs.rs
tests/: btrfs_snapshot_tests.rs  robustness_tests.rs  simulation_tests.rs
