[package]
name = "arch-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
config = "0.14"
dirs = "5.0"
secrecy = { version = "0.8", features = ["alloc"] }
async-trait = "0.1"
dashmap = "5.5"
regex = "1.10"
urlencoding = "2.1"
lazy_static = "1.4"
fuzzy-matcher = "0.3"
open = "5"

[dev-dependencies]
tempfile = "3"
